init css lesson

--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,7 +1,6 @@
-<div>
+<div class="container">
   <div  *ngFor="let card of courseCard">
     <app-simple-card  routerLink="/learn/{{param}}" (click)="getParamCard(card.nameCard)" [card] = "card">
     </app-simple-card>
   </div>
-
 </div>
