--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -1,1 +1,8 @@
-<p>topic works!</p>
+<div class="wrap-topic">
+  <div class="row">
+    <div class="wrap-topic-item col-3" *ngFor="let topic of topics">
+      {{topic.topicName}}
+    </div>
+  </div>
+
+</div>
