add Login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
   </div>
 </nav>
 <!-- main app container -->
-<div class="container">
+<div>
     <router-outlet></router-outlet>
 </div>
 <!-- footer -->
+
