add router list word

--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -1,8 +1,8 @@
 <div class="wrap-topic">
   <div class="row">
-    <div class="wrap-topic-item col-3" *ngFor="let topic of topics">
-      {{topic.topicName}}
+    <div (click)="goToListWord(topic.id)" class="wrap-topic-item col-3" *ngFor="let topic of topics">
+     <div> {{topic.topicName}}</div>
+      <div>{{topic.id}}</div>
     </div>
   </div>
-
 </div>
