--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -1,44 +1,19 @@
 .wrap-topic {
   display: flex;
+  margin: 0 auto;
   background-color:#FFF8DC;
+  .space-topic{
+    width: 80%;
+    margin: 0 auto;
+  }
   &-item {
-
+    margin-top: 20px;
     cursor: pointer;
     height: 250px;
-    width: 50%;
-    margin: 20px;
-    padding: 0px 10px 60px 10px;
-    border: 1px initial ;
-    boder-radius: 5px;
-    box-shadow:  2px 2px 2px 2px #888888;
+    text-align: center;
+    border-radius: 10px;
+    padding: 20px;
     background-color:#FFFFFF;
   }
 
 }
-.icon{
-  background-color:#DCDCDC;
-  height: 100%;
-  width: 100%;
-}
-.id{
-  text-align: center;
-  color : #C0C0C0;
-  background-color: #FFFFFF;
-}
-.learn{
-  position: relative;
-  top: 70%;
-  text-align: center;
-}
-.name{
-  position: relative;
-  top: 50%;
-  left: 10%;
-  font-size:small;
-}
-.fa.fa-graduation-cap{
-  position: relative;
-  top: 25%;
-  left: 25%;
-}
-
