--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -1,19 +1,38 @@
 .wrap-topic {
   display: flex;
   margin: 0 auto;
-  background-color:#FFF8DC;
+  background-color:#fcfaf2;
   .space-topic{
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
   }
   &-item {
     margin-top: 20px;
     cursor: pointer;
     height: 250px;
+    width: 200px;
     text-align: center;
     border-radius: 10px;
     padding: 20px;
     background-color:#FFFFFF;
+    &-number{
+      position: relative;
+      width: 39px;
+      top: -20px;
+      left: 59px;
+      height: 32px;
+      background-color: #fcfaf2;
+      font-weight: 500;
+      border-radius: 0px 0px 23px 26px;
+    }
+    &-name{
+      position: relative;
+      bottom: -88px;
+    }
+    &-icon{
+      position: relative;
+      top:30px;
+    }
   }
 
 }
