--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -4,7 +4,7 @@
   background-color:#fcfaf2;
   .space-topic{
     width: 60%;
-    margin: 0 auto;
+    margin: 100px auto 100px auto;
   }
   &-item {
     margin-top: 20px;
