--- a/src/app/modules/user/components/practice-word/practice-word.component.html
+++ b/src/app/modules/user/components/practice-word/practice-word.component.html
@@ -2,6 +2,16 @@
   <div class="container">
     <div class="space-top">
     </div>
-    <app-choose-word-type></app-choose-word-type>
+    <div class="wrap-progress">
+      <div class="progress">
+        <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75"
+             aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="item-score">
+        0
+      </div>
+    </div>
+<!--<app-choose-word-type></app-choose-word-type>-->
+    <app-default-word-type></app-default-word-type>
   </div>
 </div>
