--- a/src/app/modules/user/components/practice-word/practice-word.component.scss
+++ b/src/app/modules/user/components/practice-word/practice-word.component.scss
@@ -3,4 +3,23 @@
     padding-top: 100px;
   }
 }
-
+.wrap-progress{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  .progress{
+    margin-left: 40px;
+    width: 75%;
+    height: 32px;
+    border-radius: 20px;
+  }
+  .item-score{
+    background: antiquewhite;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 25px;
+    line-height: 47px;
+    width: 50px;
+    height:50px;
+  }
+}
