[CLASS] create layout class component

--- a/src/app/theme/layouts/header/header.component.html
+++ b/src/app/theme/layouts/header/header.component.html
@@ -8,6 +8,7 @@
       <ul class="navbar-nav">
         <a class="nav-item active nav-link" routerLink="/home">Home</a>
         <a class="nav-item nav-link" routerLink="/learn">Learn word</a>
+        <a class="nav-item nav-link" routerLink="/class">Class</a>
         <a class="nav-item nav-link" routerLink="/admin" *ngIf="isAdmin">Admin</a>
 
       </ul>
