--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -10,10 +10,11 @@
   <div class="learn-target">
     <div class="title">{{card.nameCard}}</div>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+           aria-valuemin="0" aria-valuemax="100"></div>
     </div>
     <div class="target-button">
-      <div class="target frequency">
+      <div class="target frequency" data-toggle="modal" (click)="showPopupTarget($event)">
         <div>
           <span class="highlight">{{card.timeTarget}}</span>phut moi ngay
         </div>
@@ -29,3 +30,50 @@
     </div>
   </div>
 </div>
+
+<!-- Modal -->
+<!--<div class="modal fade" id="modalTarget" tabindex="-1" role="dialog">-->
+<!--  <div class="modal-dialog" role="document">-->
+<!--    <div class="modal-content">-->
+<!--      <div class="modal-header">-->
+<!--        <h5 class="modal-title" id="exampleModalLongTitle">Target</h5>-->
+<!--        <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--          <span aria-hidden="true">&times;</span>-->
+<!--        </button>-->
+<!--      </div>-->
+<!--      <div class="modal-body">-->
+<!--        <div class="title">Hãy đặt mục tiêu hằng ngày, rồi hoàn thành mục tiêu để giành phần thưởng</div>-->
+<!--        <div class="radio-target d-flex flex-column mt-3">-->
+<!--          <div class="form-check form-check-inline">-->
+<!--            <input class="form-check-input" type="radio" id="inlineCheckbox1" name="radioTarget" [value]="5"-->
+<!--                   [(ngModel)]="value">-->
+<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox1">-->
+<!--              <span>1500 điểm:</span>-->
+<!--              <span class="text-center">5 phút mỗi ngày</span>-->
+<!--            </label>-->
+<!--          </div>-->
+<!--          <div class="form-check form-check-inline">-->
+<!--            <input class="form-check-input" type="radio" id="inlineCheckbox2" name="radioTarget" [value]="15"-->
+<!--                   [(ngModel)]="value">-->
+<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox2">-->
+<!--              <span>6000 điểm:</span>-->
+<!--              <span class="text-center">15 phút mỗi ngày</span>-->
+<!--            </label>-->
+<!--          </div>-->
+<!--          <div class="form-check form-check-inline">-->
+<!--            <input class="form-check-input" type="radio" id="inlineCheckbox3" name="radioTarget" [value]="45"-->
+<!--                   [(ngModel)]="value">-->
+<!--            <label class="form-check-label grid-column-110px-1fr" for="inlineCheckbox3">-->
+<!--              <span>20,000 điểm:</span>-->
+<!--              <span class="text-center">45 phút mỗi ngày</span>-->
+<!--            </label>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="modal-footer">-->
+<!--        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModal">Close</button>-->
+<!--        <button type="button" class="btn btn-primary" (click)="onSubmitTarget()">Save changes</button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
