[CLASS] [member] implement preliminary listMember

--- a/src/app/modules/user/components/class/class.component.html
+++ b/src/app/modules/user/components/class/class.component.html
@@ -5,7 +5,7 @@
       <div class="ranking bg-primary ">
         <app-ranking></app-ranking>
       </div>
-      <div class="member bg-primary ">
+      <div class="member">
         <app-member></app-member>
       </div>
     </div>
