--- a/src/app/modules/user/components/class/member/member.component.html
+++ b/src/app/modules/user/components/class/member/member.component.html
@@ -1,1 +1,33 @@
-<p>member works!</p>
+<div class="wrap-member">
+  <div class="title">
+    50 thành viên
+  </div>
+  <div class="member-input">
+    <div class="input-group mb-3 px-3">
+      <input
+        [(ngModel)]="inputNameMember"
+        type="text" class="form-control" placeholder="Name member" aria-label="Recipient's username">
+      <div class="input-group-append">
+        <button
+          (click)="addMember()"
+          class="btn btn-outline-secondary" type="button">Button</button>
+      </div>
+    </div>
+  </div>
+  <div class="member-table">
+    <table class="table">
+      <thead class="thead-light">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Full Name</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let member of members">
+        <th scope="row">{{member.id}}</th>
+        <td>{{member.name}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
