[CLASS] [member] implement preliminary listMember

--- a/src/app/modules/user/components/class/member/member.component.html
+++ b/src/app/modules/user/components/class/member/member.component.html
@@ -2,8 +2,8 @@
   <div class="title">
     50 thành viên
   </div>
-  <div class="member-input">
-    <div class="input-group mb-3 px-3">
+  <div class="member-input py-2">
+    <div class="input-group px-3">
       <input
         [(ngModel)]="inputNameMember"
         type="text" class="form-control" placeholder="Name member" aria-label="Recipient's username">
