--- a/src/app/modules/user/components/class/class.component.html
+++ b/src/app/modules/user/components/class/class.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="class-page__container">
     <div class="manager-member">
-      <div class="ranking bg-primary ">
+      <div class="ranking">
         <app-ranking></app-ranking>
       </div>
       <div class="member">
