--- a/src/app/modules/user/components/class/class.component.scss
+++ b/src/app/modules/user/components/class/class.component.scss
@@ -12,13 +12,15 @@
     .manager-member {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 3%;
 
       .ranking{
-        flex: 40%;
+        flex: 0 0 40%;
+        //flex-basis: 400px;
+        //height: 40%;
       }
       .member{
-        flex: 50%;
+        flex:0 0 52%;
       }
     }
   }
