[CLASS] fixed thead class table

--- a/src/app/modules/user/components/class/member/member.component.html
+++ b/src/app/modules/user/components/class/member/member.component.html
@@ -10,7 +10,8 @@
       <div class="input-group-append">
         <button
           (click)="addMember()"
-          class="btn btn-outline-secondary" type="button">Button</button>
+          class="btn btn-outline-secondary" type="button">Add
+        </button>
       </div>
     </div>
   </div>
