--- a/src/app/modules/user/components/class/member/member.component.scss
+++ b/src/app/modules/user/components/class/member/member.component.scss
@@ -14,6 +14,15 @@
     .member-table {
       max-height: 385px;
       overflow: auto;
+
+      .table {
+        position: relative;
+
+        & > thead th {
+          position: sticky;
+          top: -1px;
+        }
+      }
     }
   }
 }
