[CLASS] Status-Member implement preliminary list status-members.component

--- a/src/app/modules/user/components/class/class.component.html
+++ b/src/app/modules/user/components/class/class.component.html
@@ -12,7 +12,7 @@
     <div class="bg-secondary exercise">
       <app-exercise></app-exercise>
     </div>
-    <div class="bg-success status-member">
+    <div class="status-member">
       <app-status-members></app-status-members>
     </div>
   </div>
