--- a/src/app/modules/user/components/class/ranking/ranking.component.scss
+++ b/src/app/modules/user/components/class/ranking/ranking.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep app-ranking {
-  .wrap-ranking {
+  .ranking__wrap {
     border: 1px solid gray;
     border-radius: 7px;
     height: 100%;
