--- a/src/app/modules/user/components/class/member/member.component.scss
+++ b/src/app/modules/user/components/class/member/member.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep app-member {
-  .wrap-member {
+  .member__wrap {
     border: 1px solid gray;
     border-radius: 7px;
     height: 100%;
