--- a/src/app/modules/user/components/class/ranking/ranking.component.html
+++ b/src/app/modules/user/components/class/ranking/ranking.component.html
@@ -7,7 +7,7 @@
       <thead class="thead-light">
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Name</th>
+        <th scope="col">Full name</th>
         <th scope="col">Score</th>
       </tr>
       </thead>
