[CLASS] ranking implement ranking component

--- a/src/app/modules/user/components/class/ranking/ranking.component.html
+++ b/src/app/modules/user/components/class/ranking/ranking.component.html
@@ -14,7 +14,7 @@
       <tbody>
       <tr *ngFor="let member of members">
         <th scope="row">{{member.id}}</th>
-        <td>{{member.name}}</td>
+        <td>{{member.fullName}}</td>
         <td>{{member.score}}</td>
       </tr>
       </tbody>
