--- a/src/app/modules/user/components/class/status-members/status-members.component.html
+++ b/src/app/modules/user/components/class/status-members/status-members.component.html
@@ -2,13 +2,26 @@
   <div class="status-member__tab">
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <div class="nav-link">All</div>
+        <div
+          class="nav-link"
+          (click)="selectStatus(0)"
+          [class.active]="status === 0"
+        >All
+        </div>
       </li>
       <li class="nav-item">
-        <div class="nav-link active">Completed</div>
+        <div
+          class="nav-link"
+          (click)="selectStatus(1)"
+          [class.active]="status === 1"
+        >Completed</div>
       </li>
       <li class="nav-item">
-        <div class="nav-link">Incomplete</div>
+        <div
+          class="nav-link"
+          (click)="selectStatus(2)"
+          [class.active]="status === 2"
+        >Incomplete</div>
       </li>
     </ul>
   </div>
@@ -25,7 +38,7 @@
         <tbody>
         <tr *ngFor="let member of members">
           <th scope="row">{{member.id}}</th>
-          <td>{{member.name}}</td>
+          <td>{{member.fullName}}</td>
           <td>{{member.status}}</td>
         </tr>
         </tbody>
