--- a/src/app/theme/components/input-word-type/input-word-type.component.html
+++ b/src/app/theme/components/input-word-type/input-word-type.component.html
@@ -1,1 +1,9 @@
-<p>input-word-type works!</p>
+<div class="wrap-input-word">
+  <div class="des-word">Gõ Vào Chính Xác</div>
+  <h2>Chuẩn bị</h2>
+  <div class="word-type">V</div>
+  <input>
+  <div class="d-flex mt-4">
+    <div class="alphabet mt-3" *ngFor="let alphabet of val">{{alphabet}}</div>
+  </div>
+</div>
