--- a/src/app/modules/user/components/practice-word/practice-word.component.scss
+++ b/src/app/modules/user/components/practice-word/practice-word.component.scss
@@ -2,6 +2,27 @@
   .space-top{
     padding-top: 100px;
   }
+  .btn-check{
+    float: right;
+    margin-top: 50px;
+    background-color: #ffd55599;
+    font-weight: 500;
+    i{
+      font-size: 39px;
+      color: #ce9aff;
+    }
+  }
+  .btn-check-next{
+    .text-click-next{
+      line-height: 36px;
+      font-size: 17PX;
+    }
+    .next-click{
+      font-size: 40px;
+      margin-left: 10px;
+      color: black;
+    }
+  }
 }
 .wrap-progress{
   align-items: center;
@@ -21,5 +42,6 @@
     line-height: 47px;
     width: 50px;
     height:50px;
+    margin-right: 30px;
   }
 }
