--- a/src/app/modules/user/components/simple-card/simple-card.component.html
+++ b/src/app/modules/user/components/simple-card/simple-card.component.html
@@ -9,10 +9,8 @@
   </div>
   <div class="learn-target">
     <div class="title">{{card.nameCard}}</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="25"
-           aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
+    <progress-bar [progress]="80" [color]="'#488aff'">
+    </progress-bar>
     <div class="target-button">
       <div class="target frequency"  type="button"  data-toggle="modal" data-toggle="modal" data-target="#exampleModalCenter" (click)="showPopupTarget(); $event.stopPropagation();">
         <div>
