--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 ﻿<!-- header -->
 <app-header></app-header>
+<div style="padding-top: 100px;" class="space-top">
+</div>
 <!-- main app container -->
 <div>
     <router-outlet></router-outlet>
