--- a/src/app/modules/user/components/word-lesson/word-lesson.component.html
+++ b/src/app/modules/user/components/word-lesson/word-lesson.component.html
@@ -1,31 +1,27 @@
 <div class="wrap-lesson ">
-  <div class="wrap-btn-action">
-    <div>
-      <div (click)="backToPrevious()" *ngIf="levelParam > 1" class="btn btn-warning btn-previous">
-        <i class="fas fa-angle-left"></i>
-        <span>Cấp độ {{levelParam}}</span>
-      </div>
-    </div>
-
-    <div>
-      <div  (click)="goToNextPage()" class="btn btn-info btn-after">
-        <span>Cấp độ {{nextLevelParam}}</span>
-        <i class="fas fa-angle-right"></i>
-      </div>
-    </div>
-
-  </div>
   <div class="container">
-    <div class="progress-box">
-      <div class="title-level">Level {{levelParam}}</div>
-      <div>
-        <div class="title-lesson">title</div>
-        <div class="progress progress-cus">
-          <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-               aria-valuemax="100"></div>
+    <div class="progress-box d-flex">
+      <button *ngIf="levelParam > 1" class="btn  btn-warning btn-next" (click)="backToPrevious()">
+        <div>
+          <div><i class="fas fa-chevron-circle-left"></i></div>
+          <div  style="font-weight: 500" >Level<br>{{levelParam}}</div>
         </div>
+      </button>
+      <div class="progress-cus">
+        <div class="title-level">Level {{levelParam}}</div>
+        <div>
+          <div class="title-lesson">title</div>
+          <progress-bar [progress]="80" [color]="'#488aff'">
+          </progress-bar>
+        </div>
+        <button (click)="learnWord($event)" type="button" class="btn btn-success btn-learn">Học những từ này</button>
       </div>
-      <button (click)="learnWord($event)" type="button" class="btn btn-success btn-learn">Học những từ này</button>
+      <button (click)="goToNextPage()" class="btn btn-warning btn-next">
+        <div>
+          <div><i class="fas fa-chevron-circle-right"></i></div>
+          <div style="font-weight: 500" >Level<br>{{nextLevelParam}}</div>
+        </div>
+      </button>
     </div>
     <div class="mt-5">
       <div *ngFor="let word of words">
