--- a/src/app/modules/user/components/word-lesson/word-lesson.component.scss
+++ b/src/app/modules/user/components/word-lesson/word-lesson.component.scss
@@ -2,33 +2,36 @@
   padding-top: 30px;
 
   .progress-box {
+    justify-content: space-between;
     .progress-cus {
-      width: 80%;
+      width: 100%;
       margin: 0 auto;
     }
 
     border-radius: 10px;
     padding: 30px 30px;
     background-color: #FFFFFF;
-    -webkit-box-shadow: 4px 0px 8px -2px rgba(0, 0, 0, 0.24);
-    box-shadow: 4px 0px 8px -2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0px 0px 6px 0px rgb(0 0 0 / 38%);
   }
 
   .btn-learn {
     margin-top: 20px;
-    margin-left: 105px;
+    margin-left: 16px;
   }
-
+  .btn-warning{
+    background-color: #ffc10896;
+    border-color: #ffc10896;
+  }
   .title-lesson {
     font-weight: 600;
     font-size: 24px;
-    margin-left: 105px;
-    margin-bottom: 10px;
+    margin-left: 16px;
   }
 
   .title-level {
-    font-weight: 500;
     font-size: 18px;
+    margin-left: 16px;
+    color: #b1b1b1;
   }
 
   .word-line {
@@ -43,54 +46,18 @@
       font-weight: 500;
     }
   }
-
-  background-color: #fcfaf2;
   height: 100vh;
 }
 
-.wrap-btn-action {
-  display: flex;
-  justify-content: space-between;
-  .btn-previous {
-    width: 118px;
-    top: 125px;
-    height: 50px;
-    left: 270px;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
 
-    i {
-      margin-top: 5px;
-      margin-right: 10px;
-    }
+.btn-next {
 
-    span {
-      font-weight: 500;
-    }
+  i {
+   font-size: 50px;
+    color: #15aabf;
   }
 
-  .btn-after {
-    float: right;
-    width: 118px;
-    top: 125px;
-    height: 50px;
-    right: 270px;
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    align-content: center;
-
-    i {
-      margin-top: 5px;
-      margin-left: 10px;
-    }
-
-    span {
-      font-weight: 500;
-    }
+  span {
+    font-weight: 500;
   }
-
 }
