--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -1,6 +1,6 @@
 <div class="wrap-topic">
   <div class="row space-topic">
-    <div (click)="goToListWord(topic.id)" class="col-3 " *ngFor="let topic of topics">
+    <div (click)="goToListWord(topic.topicNo)" class="col-3 " *ngFor="let topic of topics">
       <div class="wrap-topic-item ">
         <div class="wrap-topic-item-number">{{topic.id}}</div>
         <div class="wrap-topic-item-icon" ><i class="fa fa-graduation-cap" aria-hidden="true" style="font-size:60px"></i></div>
