--- a/src/app/modules/user/components/word-lesson/word-lesson.component.scss
+++ b/src/app/modules/user/components/word-lesson/word-lesson.component.scss
@@ -35,15 +35,19 @@
   }
 
   .word-line {
-    margin-top: 10px;
-    display: flex;
-    padding-bottom: 5px;
-    margin-left: 10px;
-    justify-content: space-between;
-    border-bottom: 1px solid #ffedb9;
-
-    &-left {
+    display: grid;
+    grid-gap: 50px 100px;
+    grid-template-columns: 100px 200px 1fr;
+    -webkit-box-shadow: 0px 5px 6px -9px rgb(0 0 0 / 86%);
+    padding: 10px 4px;
+    .word-item{
       font-weight: 500;
+    }
+    .ipa-item{
+      color: #a9a9a9;
+    }
+    .ex-item{
+      color: #868686;
     }
   }
   height: 100vh;
@@ -60,4 +64,7 @@
   span {
     font-weight: 500;
   }
+}
+.space-height{
+  height: 50px;
 }
