--- a/src/app/modules/user/components/practice-word/practice-word.component.html
+++ b/src/app/modules/user/components/practice-word/practice-word.component.html
@@ -1,10 +1,8 @@
 <div class="wrap-practice-word">
   <div class="container">
     <div class="wrap-progress">
-      <div class="progress">
-        <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75"
-             aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
+      <progress-bar class="progress-score" [progress]="80" [color]="'#488aff'">
+      </progress-bar>
       <div class="item-score">
         {{currentScore}}
       </div>
@@ -22,9 +20,21 @@
 
     </div>
     <div *ngIf="!!wordItem" [ngSwitch]="option">
-      <app-input-word-type *ngSwitchCase="options.inputOption"></app-input-word-type>
-      <app-default-1word-type *ngSwitchCase="options.defaultOption"></app-default-1word-type>
-      <app-choose-word-type *ngSwitchCase="options.ChooseOption" [word]="wordItem" [randomList]="wordRandom"></app-choose-word-type>
+      <app-input-word-type (callBackInputNextWordHandel)="callBackNextWordHandel()"
+                           [(optionInputWord)] = "option"
+                           *ngSwitchCase="options.inputOption"
+                           [wordInput]="wordItem">
+
+      </app-input-word-type>
+      <app-default-word-type *ngSwitchCase="options.defaultOption"
+                             [wordDefault]="wordItem">
+
+      </app-default-word-type>
+      <app-choose-word-type (callBackChooseNextWordHandel)="callBackNextWordHandel()"
+                            *ngSwitchCase="options.ChooseOption"
+                            [(optionChooseWord)] = "option" [word]="wordItem"
+                            [wordList]="wordRandom">
+      </app-choose-word-type>
     </div>
 
 
