--- a/src/app/theme/components/choose-word-type/choose-word-type.component.scss
+++ b/src/app/theme/components/choose-word-type/choose-word-type.component.scss
@@ -6,7 +6,8 @@
     color: rgb(73, 74, 76);
   }
   .word-name{
-    font-size: 36px;
+    margin-top: 50px;
+    font-size: 20px;
     text-align: center;
     margin-left: 146px;
   }
@@ -33,7 +34,7 @@
       text-align: center;
       font-size: 30px;
       // background-color: #caffee;
-      box-shadow: 0px 1px 15px 5px rgba(0,0,0,0.4);
+      box-shadow: 0px 3px 8px 2px rgb(0 0 0 / 24%);
       border-radius: 10px;
       height: 100px;
       cursor: pointer;
